# babiling

./: .gitignore  LEGUMIN.txt  Makefile.am  README.txt  autogen.sh  configure.ac
client/: Makefile.am  babiling-shell.html  fv-array-object.c  fv-array-object.h  fv-audio-buffer.c  fv-audio-buffer.h  fv-audio-device-emscripten.c  fv-audio-device-sdl.c  fv-audio-device.h  fv-data.c  fv-data.h  fv-editor.c  fv-error-message-emscripten.c  fv-error-message-native.c  fv-error-message.h  fv-flag-painter.c  fv-flag-painter.h  fv-game.c  fv-game.h  fv-gl-funcs.h  fv-gl.c  fv-gl.h  fv-hud.c  fv-hud.h  fv-image-data-emscripten.c  fv-image-data-native.c  fv-image-data.h  fv-logic.c  fv-logic.h  fv-main.c  fv-map-buffer.c  fv-map-buffer.h  fv-map-painter.c  fv-map-painter.h  fv-map.h  fv-map.ppm  fv-matrix.c  fv-matrix.h  fv-microphone-emscripten.c  fv-microphone-pulse.c  (+27 more)
client/data/: ARTCREDITS.txt  Makefile.am  bar.blend  bar.ply  flag-notes.txt  flag-post-1-2-m.blend  flag-post-1-2-m.ply  flag-post-2-3-m.blend  flag-post-2-3-m.ply  flag-post-3-5-m.blend  flag-post-3-5-m.ply  flag-post-7-10-n.blend  flag-post-7-10-n.ply  fv-color-fragment.glsl  fv-hud-fragment.glsl  fv-hud-vertex.glsl  fv-lighting-texture-fragment.glsl  fv-lighting.glsl  fv-map-vertex.glsl  fv-person-fragment.glsl  fv-person-vertex.glsl  fv-special-color-vertex.glsl  fv-special-texture-vertex.glsl  generate-flag-texture.py  get-flags.py  make-atlas.py  make-flag.py  make-map-texture.py  table.blend  table.ply
common/: Makefile.am  fv-bitmask.c  fv-bitmask.h  fv-buffer.c  fv-buffer.h  fv-flag.h  fv-list.h  fv-netaddress.c  fv-netaddress.h  fv-pointer-array.h  fv-proto-types.h  fv-proto.c  fv-proto.h  fv-util.c  fv-util.h
doc/: Makefile.am  protocol.txt
server/: Makefile.am  babiling.service.in  babiling.socket  fv-address.c  fv-address.h  fv-base58.c  fv-base58.h  fv-base64.c  fv-base64.h  fv-blob.c  fv-blob.h  fv-buffer.c  fv-buffer.h  fv-connection.c  fv-connection.h  fv-cpus.c  fv-cpus.h  fv-crypto.c  fv-crypto.h  fv-daemon.c  fv-daemon.h  fv-dns-bootstrap.c  fv-dns-bootstrap.h  fv-ecc.c  fv-ecc.h  fv-encoded-words.c  fv-encoded-words.h  fv-error.c  fv-error.h  fv-file-error.c  fv-file-error.h  fv-hash-table.c  fv-hash-table.h  fv-http-parser.c  fv-http-parser.h  fv-ipc-client.c  fv-ipc-client.h  fv-ipc-proto.c  fv-ipc-proto.h  fv-ipc-sockaddr.c  (+68 more)
