noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
	fv-bitmask.c \
	fv-bitmask.h \
	fv-buffer.c \
	fv-buffer.h \
	fv-list.c \
	fv-list.h \
	fv-netaddress.c \
	fv-netaddress.h \
	fv-pointer-array.h \
	fv-proto.c \
	fv-proto.h \
	fv-util.c \
	fv-util.h \
	$(NULL)

AM_CPPFLAGS = \
	$(FINVENKISTO_EXTRA_CFLAGS) \
	$(NULL)

libcommon_a_LIBADD = \
	$(FINVENKISTO_EXTRA_LIBS) \
	$(NULL)

